# GUTKOVSKIY_OSISP_prj_2024

FileManager/: CMakeLists.txt  FileManager  Makefile  file_operations.cpp  file_operations.h  main.cpp  panel.cpp  panel.h  tab.cpp  tab.h  tab_manager.cpp  tab_manager.h  utils.cpp  utils.h
